# goliath

./: .gitignore  Cargo.toml  LICENSE  bootstrap.sh  deny.toml
.github/: dependabot.yml  pr-checks.yml
.github/workflows/: pr-checks.yml
crates/goliath_common/: Cargo.toml
crates/goliath_common/src/: lib.rs
crates/goliath_common/src/messages/: commands.rs  error.rs  message.rs  mod.rs  reports.rs
crates/goliath_common/src/tracing/: error.rs  mod.rs
crates/goliath_common/src/video/: error.rs  mod.rs  pipeline.rs
crates/goliath_operator/: Cargo.toml
crates/goliath_operator/src/: main.rs
crates/goliath_operator/src/client/: mod.rs
crates/goliath_operator/src/error/: mod.rs
crates/goliath_operator/src/session/: mod.rs
crates/goliath_operator/src/video/: mod.rs  operator_pipeline.rs
crates/goliath_server/: Cargo.toml
crates/goliath_server/src/: main.rs
crates/goliath_server/src/error/: mod.rs
crates/goliath_vehicle/: Cargo.toml
crates/goliath_vehicle/src/: main.rs
crates/goliath_vehicle/src/error/: mod.rs
crates/goliath_vehicle/src/image_proc/: mod.rs
crates/goliath_vehicle/src/motors/: directional_motor_pin.rs  mod.rs  tracks_driver.rs  turret_driver.rs
crates/goliath_vehicle/src/server/: mod.rs
crates/goliath_vehicle/src/session/: mod.rs
crates/goliath_vehicle/src/ssd1306/: commands.rs  mod.rs  screen_space.rs
crates/goliath_vehicle/src/video/: capture_pipeline.rs  encoding_pipeline.rs  mod.rs  rtp_pipeline.rs
crates/goliath_wireguard/: Cargo.toml
crates/goliath_wireguard/src/: main.rs
crates/goliath_wireguard/src/error/: mod.rs
