[workspace]
members = ["crates/goliath_operator", "crates/goliath_vehicle", "crates/goliath_server", "crates/goliath_wireguard", "crates/goliath_common"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bitcode = { version = "0.6.9", default-features = false, features = ["std", "serde"] }
env_logger = { version = "0.11.8", default-features = false, features = ["color"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
gstreamer = { version = "0.24.4", default-features = false, features = ["v1_20", "log"] }
gstreamer-app = { version = "0.24.4", default-features = false, features = ["v1_20"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
lazy_static = { version = "1.5.0", default-features = false }
log = { version = "0.4.27", default-features = false, features = ["std"] }
rppal = { version = "0.22.1", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.143", default-features = false, features = ["std"] }
thiserror = { version = "2.0.12", default-features = false, features = ["std"] }
tinyvec = { version = "1.9.0", default-features = false, features = ["std"] }
tokio = { version = "1.47.1", default-features = false, features = ["fs", "rt-multi-thread", "macros", "net", "sync", "parking_lot", "time"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "fmt", "env-filter", "tracing-log"] }

[profile.release]
codegen-units = 1
lto = "fat"
