[package]
name = "goliath_common"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
bytes = { version = "1.11.0", default-features = false, features = ["std"]}
bitcode = { workspace = true }
env_logger = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
gstreamer = { workspace = true, optional = true }
gstreamer-app = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = []
trace = ["dep:tracing", "dep:tracing-subscriber"]
video = ["dep:gstreamer", "dep:gstreamer-app"]
