[package]
name = "goliath_operator"
version = "0.1.0"
edition = "2024"

[dependencies]
goliath_common = { path = "../goliath_common" }

image = { workspace = true }
log = { workspace = true }
sdl2 = { version = "0.38.0", features = ["bundled"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

tracing = { workspace = true, optional = true }

[features]
default = ["trace"]
trace = ["dep:tracing", "goliath_common/trace"]
