[package]
name = "goliath_operator"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
goliath_common = { path = "../goliath_common" }

image = { workspace = true }
log = { workspace = true }
sdl2 = { version = "0.38.0", features = ["bundled"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

tracing = { workspace = true, optional = true }

[features]
default = ["trace"]
trace = ["dep:tracing", "goliath_common/trace"]
