[package]
name = "goliath_vehicle"
version = "0.1.0"
edition = "2024"

[dependencies]
goliath_common = { path = "../goliath_common", features = ["video"] }

env_logger = { workspace = true }
futures-util = { workspace = true }
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
image = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rppal = { workspace = true }
thiserror = { workspace = true }
tinyvec = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

tracing = { workspace = true, optional = true }

[features]
default = ["trace"]
trace = ["dep:tracing", "goliath_common/trace"]
