[package]
name = "goliath_vehicle"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
goliath_common = { path = "../goliath_common", features = ["video"] }

futures-util = { workspace = true }
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
image = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rppal = { workspace = true }
thiserror = { workspace = true }
tinyvec = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

tracing = { workspace = true, optional = true }

[features]
default = ["trace"]
trace = ["dep:tracing", "goliath_common/trace"]
