[package]
name = "goliath_wireguard"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
goliath_common = { path = "../goliath_common" }

thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

tracing = { workspace = true, optional = true }

[features]
default = ["trace"]
trace = ["dep:tracing", "goliath_common/trace"]
